--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "lint": "eslint",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "serve out"
   },
   "dependencies": {
